# claude-agent-sdk-book

./: .env.template  .gitignore  README.md  pyproject.toml
scripts/: chapter_01_hello_agent.py  chapter_02_design_and_implement.py  chapter_03_serpapi_flights.py  chapter_04_advanced_features.py
scripts/chapter_05_chat_app/: server.py
scripts/chapter_05_chat_app/client/: index.html  package-lock.json  package.json
scripts/chapter_05_chat_app/client/src/: main.tsx  style.css  types.ts
scripts/chapter_05_chat_app/client/src/components/: AskUserCard.tsx  ChatPanel.tsx  ThinkingIndicator.tsx  TodoSidebar.tsx
scripts/chapter_05_chat_app/client/src/hooks/: useWebSocket.ts
