[project]
name = "claude-agent-sdk-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
